update examples, instructions

--- a/.verb.md
+++ b/.verb.md
@@ -8,12 +8,48 @@
 ## Usage
 
 ```js
-var lessHelpers = require('{%= name %}');
+var less = require('less');
+var register = require('{%= name %}')(less);
 ```
 
-## API
-<!-- add a path or glob pattern for files with code comments to use for docs  -->
-{%%= apidocs("index.js") %}
+## Registering helpers
+
+**Register a single helper**
+
+```js
+register.helper('assets', function (path) {
+  return 'dist/' + path.value + '/assets/css';
+});
+```
+
+**Register multiple helpers**
+
+```js
+register.helper('assets', function (path) {
+  return 'dist/' + path.value + '/assets/css';
+});
+```
+
+## Using helpers
+
+Example of how to use the `assets` helper we just created above:
+
+```less
+@theme: "blah";
+@assets: assets("@{theme}");
+
+.image {
+  background: url("@{assets}/bar.png");
+}
+```
+
+Results in:
+
+```css
+.image {
+  background: url("dist/blah/assets/css/bar.png");
+}
+```
 
 ## Related projects
 <!-- add an array of related projects, then un-escape the helper -->
