--- a/.verb.md
+++ b/.verb.md
@@ -16,6 +16,8 @@ var register = require('{%= name %}')(less);
 
 **Register a single helper**
 
+Example `assets` helper, that might be used for dynamically calculating the path to a project's `assets` directory, relative to the `css` file's destination. 
+
 ```js
 register.helper('assets', function (path) {
   return 'dist/' + path.value + '/assets/css';
@@ -25,8 +27,12 @@ register.helper('assets', function (path) {
 **Register multiple helpers**
 
 ```js
-register.helper('assets', function (path) {
-  return 'dist/' + path.value + '/assets/css';
+register.helpers({
+  assets: function (path) {
+    return 'dist/' + path.value + '/assets/css';
+  },
+  foo: function () {},
+  bar: function () {}
 });
 ```
 
@@ -51,9 +57,25 @@ Results in:
 }
 ```
 
+## Properties
+
+The following properties are exposed on the `this` object:
+
+- `options`: Any options passed to `render` are exposed on this object
+- `less`: the `less` object
+
+
+**Example**
+
+```js
+register.helper('assets', function (path) {
+  return path.join(path.value, this.options.assets);
+});
+```
+
+
 ## Related projects
-<!-- add an array of related projects, then un-escape the helper -->
-{%%= related([]) %}  
+{%= related(['less']) %}  
 
 ## Running tests
 {%= include("tests") %}
