--- a/.verb.md
+++ b/.verb.md
@@ -3,9 +3,14 @@
 > {%= description %}
 
 ## Install
+
+HEADS UP! This currently is not an npm module!!!! I need to come up with a different name, this is a placeholder!!!
+
 {%= include("install-npm", {save: true}) %}
 
 ## Usage
+
+HEADS UP! This currently is not an npm module!!!! I need to come up with a different name, this is a placeholder!!!
 
 ```js
 var less = require('less');
